import { IEstadoPlato } from "./IEstadoPlato";

export default class Listo implements IEstadoPlato {
    
    inicarPreparacion(plato: PlatoPedido): void {
        
    }
    
    marcarListo(plato: PlatoPedido): void {
      
    }
    
    puedeModificarse(): boolean {
      
    }
    

}