export default class HistorialPedidos {
    private pedidosFinalizados: Pedido[]

    public constructor(_pedidosFinalizados: Pedido[]) {
        this.pedidosFinalizados = _pedidosFinalizados;
    }

    public registrar(pedido: Pedido): void {

    }

    public getPedidosFinalizados(): Pedido[] {
        
    }

}