export interface IEstrategiaBeneficio{
    public calcular(precioBase: number): number
}