import { MedioDePago } from "./mediodepago";

export class Efectivo extends MedioDePago{


}