
export abstract class MedioDePago{

   public  pagar(total: number): number{
      return total;
   }
}