import { MedioDePago } from "./mediodepago";

export class Tarjeta extends MedioDePago{

}