export interface ItipoPedido {
    getDescripcion(): string
    getCostoEnvio(): number
}