import {ItipoPedido} from "./ItipoPedido";

export class PedidoRetirar implements ItipoPedido {

}