import {ItipoPedido} from "./ItipoPedido"

export class PedidoSalon implements ItipoPedido {
    
}