export default class BarraBebidas {
    
}