export default class CocinaDulce {
    
}