export default class CocinaFria {
    
}