@startuml

class Cliente {
    - nombre: string
    - apellido: string

    + agregarPedido(menu: Menu): void
    + terminarPedido(): Pedido
    + pagar(pedido: Pedido, medioDePago: MedioDePago): number
}

Cliente --> Pedido

class Menu {
    - platos: IPlatoMenu[]

    + agregarPlato(plato: IPlatoMenu): void
    + buscarPlato(nombre: string): IPlatoMenu
    + getPlatos(): IPlatoMenu[]
}

interface IPlatoMenu {
    + calcularPrecio(): number
    + obtenerPlatos(): Plato[]
}

Menu o-- IPlatoMenu

class Plato {
    - nombre: string
    - precio: number

    + getNombre(): string
}

IPlatoMenu <|.. Plato

class Combo {
    - nombre: string
    - platosIncluidos: Plato[]
    - beneficio: IEstrategiaBeneficio
}

IPlatoMenu <|.. Combo

Combo  o-- Plato

interface IEstrategiaBeneficio {
    + calcular(precioBase: number): number
}

class DescuentoPorcentual {
    - porcentaje: number
}

class PrecioFijoCombo {
    - precioFijo: number

}

IEstrategiaBeneficio <|.. DescuentoPorcentual
IEstrategiaBeneficio <|.. PrecioFijoCombo

Combo --> IEstrategiaBeneficio

class Pedido {
    - platosCocina: PlatoPedido[]
    - tipoPedido: ITipoPedido
    - confirmado: boolean

    + agregarPlato(plato: IPlatoMenu): void
    + quitarPlato(plato: IPlatoMenu): void
    + confirmar(): void
    + estaListoParaFacturar(): boolean
    + getTipoPedido(): ITipoPedido
}

Pedido o-- IPlatoMenu
Pedido *-- PlatoPedido
Pedido --> ITipoPedido

interface ITipoPedido {
    + getDescripcion(): string
    + getCostoAdicional(): number
}

class PedidoSalon {
}

class PedidoRetirar {
    
}

class PedidoEnvio {
    - direccion: string
    - costoEnvio: number

    + getDireccion(): string
}

ITipoPedido <|.. PedidoSalon
ITipoPedido <|.. PedidoRetirar
ITipoPedido <|.. PedidoEnvio

class PlatoPedido {
    - plato: Plato
    - estado: IEstadoPlato

    + getPlato(): Plato
    + iniciarPreparacion(): void
    + marcarListo(): void
    + puedeModificarse(): boolean
    + cambiarEstado(estado: IEstadoPlato): void
}

PlatoPedido --> Plato

interface IEstadoPlato {
    + iniciarPreparacion(plato: PlatoPedido): void
    + marcarListo(plato: PlatoPedido): void
    + puedeModificarse(): boolean
    + estaListo(): boolean
}

class Pendiente {
}

class EnPreparacion {
}

class Listo {
}

IEstadoPlato <|.. Pendiente
IEstadoPlato <|.. EnPreparacion
IEstadoPlato <|.. Listo

PlatoPedido --> IEstadoPlato

abstract class EstacionCocina {
    # cola: PlatoPedido[]

    + recibirPlato(plato: PlatoPedido): void
    + prepararPlato(): void
}

class Parrilla {
}

class CocinaFria {
}

class BarraBebidas {
}

class CocinaDulce {
}

EstacionCocina <|-- Parrilla
EstacionCocina <|-- CocinaFria
EstacionCocina <|-- BarraBebidas
EstacionCocina <|-- CocinaDulce

class RegistroEstaciones {
    - estaciones: Map<string, EstacionCocina>

    + registrar(tipo: string, estacion: EstacionCocina): void
    + obtener(tipo: string): EstacionCocina
}

RegistroEstaciones o-- EstacionCocina

abstract class MedioDePago {
    + pagar(total: number): number
}

class Efectivo {
}

class Tarjeta {
}

class BilleteraVirtual {
}

MedioDePago <|-- Efectivo
MedioDePago <|-- Tarjeta
MedioDePago <|-- BilleteraVirtual

interface IEstrategiaDescuento {
    + calcularDescuento(total: number): number
}

class DescuentoEfectivo {
    - porcentaje: number
}

class DescuentoDiaEspecial {
    - porcentaje: number
    - dia: number
}

IEstrategiaDescuento <|.. DescuentoEfectivo
IEstrategiaDescuento <|.. DescuentoDiaEspecial


class CalculadoraCobro {
    - descuentos: IEstrategiaDescuento[]

    + calcularTotal(pedido: Pedido, medio: MedioDePago): number
}

CalculadoraCobro --> Pedido
CalculadoraCobro --> MedioDePago
CalculadoraCobro o-- IEstrategiaDescuento

class HistorialPedidos {
    - pedidosFinalizados: Pedido[]

    + registrar(pedido: Pedido): void
    + getPedidosFinalizados(): Pedido[]
}

HistorialPedidos o-- Pedido

@enduml